# PictureRecgnize

./: pictureRecgnize.cpp  readme.txt  shijue.cpp
avoidcollision/: CMakeLists.txt  CMakeLists.txt~  avoidcollision.cpp  avoidcollision.cpp~  main.cpp  qiproject.xml  ycylib2.cpp  ycylib2.h
avoidcollision/build-mytoolchain/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
avoidcollision/build-mytoolchain/sdk/share/qi/: path.conf
avoidcollision/build-tool2/: CMakeCache.txt  Makefile  cmake_install.cmake
avoidobstacle/: CMakeLists.txt  avoidcollision.cpp  avoidcollision.h  main.cpp  objectFinder.h  qiproject.xml  svmBlue-suc.xml  svmBlue_l.xml  svmBlue_x.xml  svmRed-unknown.xml  svmYellow-suc.xml  testwalk.cpp  testwalk.h  wxzSVM.cpp  wxzSVM.h  yellow.xml  yellowNew.xml
avoidobstacle/backup/: avoidcollision.cpp
avoidobstacle/build-tool2/: CMakeCache.txt  Makefile  cmake_install.cmake
avoidobstacle/build-tool2/sdk/share/qi/: path.conf
combine/: CMakeLists.txt  main.cpp  qiproject.xml
combine/build-tool2/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
combine/build-tool2/sdk/share/qi/: path.conf
testsvm/: CMakeLists.txt  main.cpp  qiproject.xml  testsvm.cpp  testsvm.h  wxzSVM.cpp
testsvm/build-tool2/: CMakeCache.txt  Makefile  cmake_install.cmake
testsvm/build-tool2/sdk/share/qi/: path.conf
wxzSVMTraining/: a.out  exe.sh  main.cpp  svmBlue-lab.xml  svmBlue_x.xml  svmRed-lab.xml  svmRed_l.xml  svmYellow-lab.xml  svmYellow_l.xml
